filtergen (0.12.5-1) unstable; urgency=low

  * New upstream version.  (Closes: #543434)

 -- Jamie Wilkinson <jaq@debian.org>  Thu, 05 Nov 2009 18:51:41 +1100

filtergen (0.12.4-5.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix "ftbfs with gcc-4.6 -Werror": add patch from peter green that removes
    some unused variables.
    (Closes: #625327)

 -- gregor herrmann <gregoa@debian.org>  Mon, 12 Dec 2011 17:06:03 +0100

filtergen (0.12.4-5) unstable; urgency=low

  * New maintainer.  Closes: #543434.
  * Bump standards version:
    - Added Homepage field.

 -- Matt Palmer <mpalmer@debian.org>  Tue, 02 Feb 2010 16:51:39 +1100

filtergen (0.12.4-4.1) unstable; urgency=medium

  * Non-maintainer upload.
  * scanner.l: Fix buffer overflow with nested include files.
    Closes: #324908.
  * debian/rules: Make sure clean doesn't accidentally run makefile
    (and consequently autoconf).

 -- Matej Vela <vela@debian.org>  Wed,  5 Jul 2006 08:40:35 +0200

filtergen (0.12.4-4) unstable; urgency=low

  * Apply patch from Andreas Jochens to fix build failure on amd64.
    (Closes: #285935)
  * Added flex and bison to the build dependencies.
  * Updated standards version, no other changes required.

 -- Jamie Wilkinson <jaq@debian.org>  Tue, 23 Aug 2005 14:09:04 +1000

filtergen (0.12.4-3) unstable; urgency=high

  * Call the distclean target instead of clean, in our debian/rules clean
    target, so that created files are cleaned up.  Yes this is dumb, I
    blame autogoats.   (Closes: #273371)

 -- Jamie Wilkinson <jaq@debian.org>  Wed, 13 Oct 2004 14:10:26 +1000

filtergen (0.12.4-2) unstable; urgency=low

  * Updated copyright to reflect new upstream location and author.

 -- Jamie Wilkinson <jaq@debian.org>  Tue, 24 Aug 2004 12:34:16 +1000

filtergen (0.12.4-1) unstable; urgency=low

  * New upstream release.
    - Fixes behavioural bugs in fgadm script.

 -- Jamie Wilkinson <jaq@debian.org>  Tue, 24 Aug 2004 11:49:16 +1000
